# CMatrixMultiplier

./: .gitignore  CMatrixMultiplier  README.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  main.c  matrix.c  matrix.h  mult.c  mult.h
