cmake_minimum_required(VERSION 2.8)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/..)
project(CMatrixMultiplier)
set(SOURCE_EXE main.c)
set(SOURCE_MULT mult.c)
set(SOURCE_ARRAY matrix.c)
add_library(mult STATIC ${SOURCE_MULT})
add_library(matrix STATIC ${SOURCE_ARRAY})
add_executable(CMatrixMultiplier ${SOURCE_EXE})
target_link_libraries(CMatrixMultiplier mult matrix)
